tests/ui/destructuring-assignment/non-exhaustive-destructure.stderr
error[E0005]: refutable pattern in local binding
  --> $DIR/non-exhaustive-destructure.rs:2:5
   |
LL |     None = Some(3);
   |     ^^^^ pattern `Some(_)` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-02-refutability.html
   = note: the matched value is of type `Option<i32>`
help: you might want to use `if let` to ignore the variant that isn't matched
   |
LL |     if None = Some(3) { todo!() };
   |     ++                +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0005`.
