tests/ui/destructuring-assignment/non-exhaustive-destructure.rs
fn main() {
    None = Some(3);
    //~^ ERROR refutable pattern in local binding
}
